--- a/NS_energy.tex
+++ b/NS_energy.tex
@@ -16,9 +16,9 @@ dW(\mathrm{left})  =
 
 Each of the stresses on this wall does work only in its direction of
 motion: $\tau_{xx}$ is compression and will feature a $-p$ term, which
-$\tau_{xy}$ and $\tau_{xz}$ produce shear forces. The minus sign stem from
-the sign convention, since on this wall shear stresses have directions
-opposed to the Cartesian axes. Similarly,
+$\tau_{xy}$ and $\tau_{xz}$ produce shear forces. The minus sign stem
+from the sign convention, since on this wall shear stresses have
+directions opposed to the Cartesian axes. Similarly,
 \[
 dW(\mathrm{right})  =
  (u_x' dt)   \tau'_{xx}  dy dz
