--- a/defs.tex
+++ b/defs.tex
@@ -8,6 +8,7 @@
 \newcommand{\bfF}{\ensuremath{\mathbf{F}}}
 \newcommand{\bfg}{\ensuremath{\mathbf{g}}}
 \newcommand{\bfe}{\ensuremath{\mathbf{e}}}
+\newcommand{\bfA}{\ensuremath{\mathbf{A}}}
 \newcommand{\bhe}{\ensuremath{\hat{\mathbf{e}}}}
 \newcommand{\bfn}{\ensuremath{\mathbf{n}}}
 \newcommand{\bfr}{\ensuremath{\mathbf{r}}}
