--- a/fluid_mechanics.bib
+++ b/fluid_mechanics.bib
@@ -115,3 +115,36 @@ revision="W Kranz, 1952"
   url={https://books.google.es/books?id=84Pulkf-Oa8C},
   isbn={9781118031209},
   lccn={99028957},
+
+
+@book{batchelor,
+  title={An Introduction to Fluid Dynamics},
+  author={Batchelor, G.K.},
+  series={Cambridge Mathematical Library},
+  year={2000},
+  publisher={Cambridge University Press}
+}
+  isbn={9780521663960},
+  lccn={67021953},
+  url={https://books.google.es/books?id=Rla7OihRvUgC},
+
+ @misc{wiki:del,
+   author = "{Wikipedia contributors}",
+   title = "Del in cylindrical and spherical coordinates ---
+                  {W}ikipedia{,} The Free Encyclopedia",
+   year = "2018",
+   url = "https://en.wikipedia.org/wiki/Del_in_cylindrical_and_spherical_coordinates",
+   note = "[Online; accessed 29-November-2018]"
+ }
+
+
+ @misc{wiki:Vector_calculus_identities,
+   author = "{Wikipedia contributors}",
+   title = "Vector calculus identities ---
+                  {W}ikipedia{,} The Free Encyclopedia",
+   year = "2018",
+   url = "https://en.wikipedia.org/wiki/Vector_calculus_identities",
+   note = "[Online; accessed 29-November-2018]"
+ }
+
+
