--- a/glossary.tex
+++ b/glossary.tex
@@ -43,3 +43,8 @@
 
 \glsxtrnewsymbol[description={strain rate tensor}]{epsilon}{$\epsilon$}
 \glsxtrnewsymbol[description={shear stress tensor}]{tau}{$\tau$}
+
+\glsxtrnewsymbol[description={velocity potential, azimuthal angle in cylindrical and spherical coordinates}]{phi}{$\phi$}
+\glsxtrnewsymbol[description={stream function}]{psi}{$\psi$}
+
+\glsxtrnewsymbol[description={gravitational potential}]{varphi}{$\varphi$}
