--- a/intro.tex
+++ b/intro.tex
@@ -47,4 +47,13 @@ secundary.
 
 \section{Notation}
 
+\section{Style}
+
+In these notes, concepts are introduced \emph{at needed}. This is at
+variance with other texts, in which there may be an introduction to
+the general physics of fluids, another for mathematical analysis, and
+so on. So, for example, the concept of streamlines is not introduced
+until the potential flow past a cylinder is discussed. In fact, only
+the simple 2D case is introduced --- the more complicated axisymmetric
+situation is later described, for the flow past a sphere.
 
